@@ -1,0 +1,10 @@
+<header>Convert Alias Server</header>
+
+This page can be used to convert an alias virtual server into a sub-server.
+It will no longer serve the web pages of the old target server, but can instead
+have its own web content. Any existing mail aliases will be preserved, except
+for the catchall that forwards mail to the old target server. DNS records will
+not be effected. <p>
+
+<footer>
+
