@@ -1185,6 +1185,8 @@ save_mail=Changing email domain name ..
 save_mailhomes=Changing home directories of mailbox users ..
 save_mailalias=Updating mail alias for domain ..
 save_mailrename=Updating mailbox users ..
+save_mailunalias1=Removing mail aliases copied from target domain ..
+save_mailunalias2=Removing catchall mail alias ..
 save_ssl=Changing IP address of SSL virtual website ..
 save_ssl2=Changing hostname of SSL virtual website ..
 save_ssl3=Changing home directory in SSL website configuration ..
